[package]
name = "rita"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rita_client"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
cfg-if = "1"
env_logger = "0.11.3"
log = "0.4.21"
pollster = "0.3.0"
rayon = "1.10.0"
wgpu = "0.19.3"
winit = { version = "0.29", features = ["rwh_05"] }
anyhow = "1.0"
cgmath = "0.18.0"

[dependencies.image]
version = "0.24"
default-features = true
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl", "webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-rayon = { version = "1.2.1", features = ["no-bundler"] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
