[package]
name = "rita"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rita_client"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
cfg-if = "1"
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.4.0"
rayon = "1.10.0"
wgpu = "23.0.0"
winit = { version = "0.30.5", features = ["rwh_05"] }
anyhow = "1.0.92"
cgmath = "0.18.0"

[dependencies.image]
version = "0.24"
default-features = true
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "23.0.0", features = ["webgl", "webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-rayon = { version = "1.2.2", features = ["no-bundler"] }
web-sys = { version = "0.3.72", features = ["Document", "Window", "Element"] }
